# parseiro

./: pyproject.toml
parseiro/: symbols.py
parseiro/lexical/: automata.py  token.py
parseiro/syntactic/: grammar.py  parser_ll1.py  parser_lr1.py  production_rule.py
tests/: grammar_test.py
