[tool.poetry]
name = "parseiro"
version = "0.1.0"
description = ""
authors = ["André Fernandes <fpf.andre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pyright = "^1.1.381"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"